[tool.poetry]
name = "kee-config"
version = "0.1.0"
description = "Read configuration and keys from a keepass file"
authors = ["Natanael Arndt <arndtn@gmail.com>"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pykeepass = "^4.1.0.post1"
click = "^8.1.8"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
